rename from GIMP to gimp
git-svn-id: file:///srv/svn/publican/trunk@663 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-gimp/Makefile
+++ b/publican-gimp/Makefile
@@ -1,4 +1,4 @@
-BRAND	= GIMP
+BRAND	= gimp
 SPEC	= publican-$(BRAND).spec
 NAME	= publican-$(BRAND)
 VERSION = $(shell grep 'Version:' $(SPEC) | sed -e 's/Version:\s*\(.*\)$$/\1/g')
