check in fix for ar-AR right to left BZ 486162
git-svn-id: file:///srv/svn/publican/trunk@670 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -118,9 +118,9 @@ clean:
 #
 #######################################################################################
 
-#LANGS = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+#LANGS = ar-AR as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
-LANGS = as-IN bn-IN da-DK de-DE el-GR es-ES fr-FR gu-IN \
+LANGS = ar-AR as-IN bn-IN da-DK de-DE el-GR es-ES fr-FR gu-IN \
 	hi-IN hu-HU id-ID it-IT ja-JP kn-IN ko-KR lv-LV \
 	ml-IN mr-IN ms-MY nb-NO nl-NL or-IN pa-IN pl-PL \
 	pt-BR pt-PT ru-RU si-LK sr-LATN sr-RS sv-SE ta-IN \
