--- a/publican-fedora/Article_Template/Makefile
+++ b/publican-fedora/Article_Template/Makefile
@@ -6,7 +6,7 @@ PRODUCT		= Fedora
 BRAND		= fedora
 DOC_TYPE	= Article
 
-#OTHER_LANGS	= as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+#OTHER_LANGS	= ar-AR as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
 # Extra Parameters start here
 
