--- a/publican/content/SVG_Test/Makefile
+++ b/publican/content/SVG_Test/Makefile
@@ -5,7 +5,7 @@ DOCNAME		= SVG_Test
 PRODUCT		= Documentation
 #BRAND		= FIX_ME!
 
-#OTHER_LANGS	= as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
+#OTHER_LANGS	= ar-AR as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 TRANSLATIONS	= $(XML_LANG) $(OTHER_LANGS)
 
 COMMON_CONFIG  = /usr/share/publican
