--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -8,7 +8,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
 Version:	0.44
-Release:	0%{?dist}
+Release:	0.t3%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
@@ -158,6 +158,10 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
+* Fri Mar 13 2009  Jeff Fearn <jfearn@redhat.com> 0.45
+- Fix right to left fo ar-AR. BZ #486162
+- Patches and translations by Muayyad Alsadi <alsadi@ojuba.org> 
+
 * Wed Mar 11 2009  Jeff Fearn <jfearn@redhat.com> 0.44
 - Add 0-9 and '.' to DOCNAME regex. BZ #489626
 
