Add keep-together.within-column="always" to step. BZ #492021
git-svn-id: file:///srv/svn/publican/trunk@686 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -158,7 +158,8 @@ rm -rf $RPM_BUILD_ROOT
 %doc fdl.txt
 
 %changelog
-* Fri Mar 13 2009  Jeff Fearn <jfearn@redhat.com> 0.45
+* Wed Mar 25   2009  Jeff Fearn <jfearn@redhat.com> 0.45
+- Add keep-together.within-column="always" to step. BZ #492021
 - Fix right to left fo ar-AR. BZ #486162
 - Patches and translations by Muayyad Alsadi <alsadi@ojuba.org> 
 
