Remove NoExpand and ErrorContext from output if they aren't set
git-svn-id: file:///srv/svn/publican/trunk@687 322d0b13-9966-4b26-b068-8724d74359d3

--- a/XML-TreeBuilder/Makefile
+++ b/XML-TreeBuilder/Makefile
@@ -1,5 +1,8 @@
 
 
-make-patch:
-	-@diff -rubB --exclude=.svn XML-TreeBuilder-3.09 XML-TreeBuilder-patched > XML-TreeBuilder-NoExpand.patch
+patch:
+	-@diff -rubB --exclude=.svn --exclude=*.swp XML-TreeBuilder-3.09 XML-TreeBuilder-patched > XML-TreeBuilder-NoExpand.patch
+
+cppatch:
+	@cp XML-TreeBuilder-NoExpand.patch ~/Build/rpm/SOURCES/.
 
