Added missing doccomment and number to PDF highlight. BZ #491241
git-svn-id: file:///srv/svn/publican/trunk@692 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -162,6 +162,7 @@ rm -rf $RPM_BUILD_ROOT
 - Add keep-together.within-column="always" to step. BZ #492021
 - Fix right to left fo ar-AR. BZ #486162
 - Patches and translations by Muayyad Alsadi <alsadi@ojuba.org> 
+- Added missing doccomment and number to PDF highlight. BZ #491241
 
 * Wed Mar 11 2009  Jeff Fearn <jfearn@redhat.com> 0.44
 - Add 0-9 and '.' to DOCNAME regex. BZ #489626
