--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -7,8 +7,8 @@
 
 Name:		publican	
 Summary:	Common files and scripts for publishing with DocBook XML
-Version:	0.44
-Release:	0.t5%{?dist}
+Version:	0.45
+Release:	0%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content, Book_Template, Set_Template, Article_Template
