Add base langauge summary & descriptions to translated spec file. BZ #515573 Fix translated package build failure. Change tabs to spaces in generated spec files.
git-svn-id: file:///srv/svn/publican/trunk@754 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/META.yml
+++ b/publican/META.yml
@@ -28,6 +28,7 @@ requires:
   I18N::LangTags::List: 0
   Image::Magick: 0
   Image::Size: 0
+  Locale::Language: 0
   Locale::Maketext::Gettext: 0
   Locale::PO: 0
   Makefile::Parser: 0
@@ -60,6 +61,7 @@ build_requires:
   I18N::LangTags::List: 0
   Image::Magick: 0
   Image::Size: 0
+  Locale::Language: 0
   Locale::Maketext::Gettext: 0
   Locale::PO: 0
   Makefile::Parser: 0
