--- a/publican-fedora/defaults.cfg
+++ b/publican-fedora/defaults.cfg
@@ -3,5 +3,5 @@
 
 doc_url: http://docs.fedoraproject.org
 prod_url: http://www.fedoraproject.org
-license: Open Publication
+license: CC-BY-SA 3.0
 
