better error message for Kate langauge mismatch
git-svn-id: file:///srv/svn/publican/trunk@932 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Users_Guide/publican.cfg
+++ b/publican/Users_Guide/publican.cfg
@@ -1,7 +1,8 @@
 # Config::Simple 4.59
-# Fri Dec  4 10:43:25 2009
+# Mon Dec  7 11:53:58 2009
 
 chunk_first: 0
 debug: 1
 xml_lang: en-US
+chunk_section_depth: 1
 
