--- a/publican-jboss/defaults.cfg
+++ b/publican-jboss/defaults.cfg
@@ -1,7 +1,9 @@
 # Config::Simple 4.59
 # Tue Jul 21 10:49:37 2009
 
-doc_url: http://www.jboss.com
-prod_url: http://www.redhat.com/docs
-license: Open Publication
+doc_url: http://www.redhat.com/docs 
+prod_url: http://www.jboss.com
+license: CC-BY-SA
+
+
 
