try and fix utf8 issue on F13
git-svn-id: file:///srv/svn/publican/trunk@1297 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/etc/publican-website.cfg
+++ b/publican/etc/publican-website.cfg
@@ -1,4 +1,7 @@
-toc_path: /var/www/html/docs
-tmpl_path: /usr/share/publican-website/templates
-db_file: /usr/share/publican-website/default.db
+# where will the content be published to?
+#toc_path: /var/www/html/docs
+# Where are the templates to build the TOCs?
+tmpl_path: /usr/share/publican/templates
+# Where is the database?
+#db_file: /usr/share/publican/default.db
 
