--- a/publican/etc/publican-website.cfg
+++ b/publican/etc/publican-website.cfg
@@ -1,5 +1,5 @@
 # where will the content be published to?
-#toc_path: /var/www/html/docs
+toc_path: /var/www/html/docs
 # Where are the templates to build the TOCs?
 tmpl_path: /usr/share/publican/templates
 # Where is the database?
