--- a/publican/etc/publican-website.cfg
+++ b/publican/etc/publican-website.cfg
@@ -3,5 +3,5 @@ toc_path: /var/www/html/docs
 # Where are the templates to build the TOCs?
 tmpl_path: /usr/share/publican/templates
 # Where is the database?
-#db_file: /usr/share/publican/default.db
+db_file: /usr/share/publican/default.db
 
