--- a/publican-redhat/defaults.cfg
+++ b/publican-redhat/defaults.cfg
@@ -1,6 +1,6 @@
 # Config::Simple 4.59
 # Tue Jul 21 10:49:37 2009
 
-doc_url: http://www.redhat.com/docs
+doc_url: http://docs.redhat.com
 prod_url: http://www.redhat.com
 license: CC-BY-SA
