Add dt_reuires and menu_category options. BZ #647352
git-svn-id: file:///srv/svn/publican/trunk@1636 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Users_Guide/publican.cfg
+++ b/publican/Users_Guide/publican.cfg
@@ -8,4 +8,6 @@ chunk_section_depth: 0
 tmp_dir: build
 docname: Users_Guide
 #dtdver: 5.0
-
+#dt_requires: menu-example
+#menu_category: X-Example-Docs
+#os_ver: f14
