--- a/publican/publican.desktop
+++ b/publican/publican.desktop
@@ -3,7 +3,7 @@ Name=Publican - Users Guide
 Comment=Publishing books, articles, papers and multi-volume sets with DocBook XML
 Exec=xdg-open @@FILE@@
 Icon=@@ICON@@
-Categories=Documentation;Publishing;X-Red-Hat-Base;
+Categories=Documentation;X-Red-Hat-Base;
 Type=Application
 Encoding=UTF-8
 Terminal=false
