Resurrected oVirt brand for new project launch.
git-svn-id: file:///srv/svn/publican/trunk@1958 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-ovirt/defaults.cfg
+++ b/publican-ovirt/defaults.cfg
@@ -1,7 +1,7 @@
 # Config::Simple 4.59
 # Tue Jul 21 10:49:37 2009
 
-doc_url: http://ovirt.org
-prod_url: http://www.redhat.com/docs
-license: Open Publication
+doc_url: http://ovirt.org/wiki/
+prod_url: http://ovirt.org/
+license: Apache Software License 2.0
 
