--- a/publican-openshift/publican.cfg
+++ b/publican-openshift/publican.cfg
@@ -1,9 +1,10 @@
 # Config::Simple 4.59
 # Fri May 20 15:08:36 2011
 
-version: 0.8
+version: 0.9
 xml_lang: en-US
-release: 3
+release: 1
 type: brand
 brand: OpenShift
+web_style: 2
 
