Updated example publican.cfg

--- a/publican/Users_Guide/en-US/extras/publican.cfg
+++ b/publican/Users_Guide/en-US/extras/publican.cfg
@@ -1,6 +1,6 @@
 # Config::Simple 4.59
-# Mon Sep 28 16:38:14 2009
+# Wed Jul 18 13:00:40 2012
 
-xml_lang: en-US
+xml_lang: "en-US"
 type: Book
 brand: common
