update win32 build instructions, add create brand test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.swp
+*.swo
 blib/
 .build/
 _build/
@@ -14,4 +15,11 @@ MYMETA.yml
 MYMETA.json
 nytprof.out
 pm_to_blib
-
+build/
+Test_Article/
+Test_Book/
+Test_Set/
+publish/
+datadir/Common_Content/common-db5/publish/
+tmp/
+publican-Test_Brand/
