--- a/publican/Users_Guide/publican.cfg
+++ b/publican/Users_Guide/publican.cfg
@@ -11,3 +11,4 @@ docname: Users_Guide
 #dt_requires: menu-example
 #menu_category: X-Example-Docs
 #txt_formater: tables
+web_formats: html,html-single,pdf,epub,txt
