Fix rcopy_glob not returning file list

--- a/publican/Users_Guide/publican.cfg
+++ b/publican/Users_Guide/publican.cfg
@@ -12,3 +12,4 @@ docname: Users_Guide
 #menu_category: X-Example-Docs
 #txt_formater: tables
 web_formats: html,html-single,pdf,epub,txt
+brand: RedHat
